a1/brendan_gordon/TEST_PROGRAMS/invalidtype/grady_weber/binaryError.min
#binary error
var x : int;
var y : float;
var z : int;
x = 2;
y = 3.14;
z = x + y;

